# bullshit-detector

./: .gitignore  BUILD_GUIDE.md  CHANGELOG.md  LICENSE  README.md  UNRELEASED.md  pyproject.toml
.github/: copilot-instructions.md
audits/: audit_carney_2010_power_posing.md  audit_orbita_2018_pci_angina.md  audit_wansink_pizza_grimmer.md
examples/: green_coffee.py  grim_check.py  hunt_dataset.py  kalkomey_screening.py  outlier_leverage.py  sd_vs_se.py  underpowered_study.py
skills/: OVERVIEW.md  arithmetic_consistency.md  causal_consistency.md  fermi_sanity.md  logical_fallacy.md  outlier_leverage.md  paper_screening.md  power_analysis.md  redundancy_analysis.md  reproducibility_challenge.md  spurious_correlation.md  unsupervised_learning_critique.md
src/bullshit_detector/: __init__.py  dc_cluster.py  grimmer.py  leverage.py  p_checker.py  paper_screening.py  power.py  redundancy.py  reproducibility.py  spurious.py
src/bullshit_detector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_dc_cluster.py  test_grimmer.py  test_leverage.py  test_p_checker.py  test_paper_screening.py  test_power.py  test_redundancy.py  test_reproducibility.py  test_spurious.py
