[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bullshit-detector"
version = "0.1.1"
description = "Statistical detection tools for screening published research"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Matteo Niccoli", email = "matteo@mycarta.ca"},
]
keywords = [
    "statistics", "research", "reproducibility", "p-hacking",
    "spurious-correlation", "GRIM", "GRIMMER", "peer-review",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "scipy>=1.10",
    "numpy>=1.24",
    "grim>=0.1.8",
    "dcor>=0.6",
    "requests>=2.28",
]

[project.optional-dependencies]
# statsmodels is heavy — only needed for influence plots (Tier 3)
full = [
    "statsmodels>=0.14",
    "pandas>=2.0",
    "seaborn>=0.12",
    "scikit-learn>=1.3",
]
# statcheck is GPL-3.0 — optional to avoid license infection
batch = [
    "statcheck>=0.1",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/mycarta/bullshit-detector"
Documentation = "https://github.com/mycarta/bullshit-detector/blob/main/README.md"
Repository = "https://github.com/mycarta/bullshit-detector"
Issues = "https://github.com/mycarta/bullshit-detector/issues"

[tool.setuptools.packages.find]
where = ["src"]
